translate eip-100.md

--- a/EIPS/eip-100.md
+++ b/EIPS/eip-100.md
@@ -1,6 +1,6 @@
 ---
 eip: 100
-title: Change difficulty adjustment to target mean block time including uncles
+title: 修改难度调整以跟踪包括叔块的平均区块时间
 author: Vitalik Buterin
 type: Standards Track
 category: Core
@@ -8,9 +8,9 @@ status: Final
 created: 2016-04-28
 ---
 
-### Specification
+### 规范
 
-Currently, the formula to compute the difficulty of a block includes the following logic:
+当前，计算一个区块的难度的公式是如下逻辑:
 
 ``` python
 adj_factor = max(1 - ((timestamp - parent.timestamp) // 10), -99)
@@ -18,22 +18,22 @@ child_diff = int(max(parent.difficulty + (parent.difficulty // BLOCK_DIFF_FACTOR
 ...
 ```
 
-If `block.number >= BYZANTIUM_FORK_BLKNUM`, we change the first line to the following:
+如果`block.number >= BYZANTIUM_FORK_BLKNUM`时，我们按下面修改第一行:
 
 ``` python
 adj_factor = max((2 if len(parent.uncles) else 1) - ((timestamp - parent.timestamp) // 9), -99)
 ```
-### Rationale
+### 基本原理
 
-This new formula ensures that the difficulty adjustment algorithm targets a constant average rate of blocks produced including uncles, and so ensures a highly predictable issuance rate that cannot be manipulated upward by manipulating the uncle rate. A formula that accounts for the exact number of included uncles:
+这个公式确保了难度调整算法会跟踪一个恒定的平均区块(包括叔块)生成速率，因此确保了一个高度可预测的发行速率，而不能通过操纵叔块生成速率来向上操纵它。一个考虑了被包括的叔块的确切数目的公式:
 ``` python
 adj_factor = max(1 + len(parent.uncles) - ((timestamp - parent.timestamp) // 9), -99)
 ```
-can be fairly easily seen to be (to within a tolerance of ~3/4194304) mathematically equivalent to assuming that a block with `k` uncles is equivalent to a sequence of `k+1` blocks that all appear with the exact same timestamp, and this is likely the simplest possible way to accomplish the desired effect. But since the exact formula depends on the full block and not just the header, we are instead using an approximate formula that accomplishes almost the same effect but has the benefit that it depends only on the block header (as you can check the uncle hash against the blank hash).
+可以很容易地看出(在容忍~3/4194304的范围内)在数学上等于假设:一个区块有`k`个叔块相当于有一个区块时间戳都相同的`k+1`区块序列，且这可能是实现预期效果的最简单方法。但由于实际的公式依赖于整个块而不单是区块头，我们因此换用一个近似的公式来达到几乎相同的效果但好处是只依赖于区块头(就像您可以将uncle哈希值与空白哈希值进行对比一样)。
 
-Changing the denominator from 10 to 9 ensures that the block time remains roughly the same (in fact, it should decrease by ~3% given the current uncle rate of 7%).
+将分母从10改为9确保了区块时间大体上跟之前差不多(实际上，基于当前的叔块率是7%，它将降低区块时间大约3%)。
 
-### References
+### 引用
 
 1. EIP 100 issue and discussion: https://github.com/ethereum/EIPs/issues/100
 2. https://bitslog.wordpress.com/2016/04/28/uncle-mining-an-ethereum-consensus-protocol-flaw/
