--- a/EIPS/eip-695.md
+++ b/EIPS/eip-695.md
@@ -12,7 +12,7 @@ created: 2017-08-21
 包括 `eth_chainId` 方法 和 `eth_`-namespaced JSON-RPC 方法。
 
 ## 摘要
-' eth_chainId '方法返回的内容是十六进制的整数值的字符串，描述当前配置的用于交易重放保护签名的"链 Id"值，由EIP-155具体描述。
+ `eth_chainId` 方法返回的内容是十六进制的整数值的字符串，描述当前配置的用于交易重放保护签名的“链Id”值，由EIP-155具体描述。
 
 ## 目的
 目前，尽管我们可以使用net_version的rpc来获取当前网络ID, 但是没有用于查询链ID的RPC. 无法使用RPC确认当前的实际区块链。
