--- a/EIPS/eip-140.md
+++ b/EIPS/eip-140.md
@@ -1,6 +1,6 @@
 ---
 eip: 140
-title: REVERT instruction
+title: REVERT指令
 author: Alex Beregszaszi (@axic), Nikolai Mushegian <nikolai@nexusdev.us>
 type: Standards Track
 category: Core
@@ -8,19 +8,19 @@ status: Final
 created: 2017-02-06
 ---
 
-## Simple Summary
+## 简单概要
 
-The `REVERT` instruction provides a way to stop execution and revert state changes, without consuming all provided gas and with the ability to return a reason.
+`REVERT`指令提供了一种停止执行并恢复原状态的方式，且不会将提供的所有的gas都消耗掉，而且还提供了返回一个表示原因的值的方法。
 
-## Abstract
+## 摘要
 
-The `REVERT` instruction will stop execution, roll back all state changes done so far and provide a pointer to a memory section, which can be interpreted as an error code or message. While doing so, it will not consume all the remaining gas.
+`REVERT`指令将停止执行，回滚所有的状态修改并返回一个指向内存区域的指针，该指针指向内容是错误代号和错误信息。当指令执行的时候，不会消耗掉所有的剩余gas。
 
-## Motivation
+## 目的
 
-Currently this is not possible. There are two practical ways to revert a transaction from within a contract: running out of gas or executing an invalid instruction. Both of these options will consume all remaining gas. Additionally, reverting an EVM execution means that all changes, including LOGs, are lost and there is no way to convey a reason for aborting an EVM execution.
+目前没有提供任何方式来达到这一点。目前两个常用的复原一个合约交易的方式是：耗光所有的gas或执行一个无效的指令。其中的任何一种都会消耗掉剩余的所有gas。复原一个EVM执行意味着，包括LOGs在内的所有的修改都会丢失并且没有方法传递中止EVM执行的原因。
 
-## Specification
+## 规范
 
 On blocks with `block.number >= BYZANTIUM_FORK_BLKNUM`, the `REVERT` instruction is introduced at `0xfd`. It expects two stack items, the top item is the `memory_offset` followed by `memory_length`. It does not produce any stack elements because it stops execution.
 
@@ -38,11 +38,11 @@ In case `REVERT` is used in the context of a `CREATE` or `CREATE2` call, no code
 
 The content of the optionally provided memory section is not defined by this EIP, but is a candidate for another Informational EIP.
 
-## Backwards Compatibility
+## 向后兼容
 
 This change has no effect on contracts created in the past unless they contain `0xfd` as an instruction.
 
-## Test Cases
+## 测试用例
 
 ```
 6c726576657274656420646174616000557f726576657274206d657373616765000000000000000000000000000000000000600052600e6000fd
@@ -53,6 +53,6 @@ should:
 - the storage at key `0x0` should be left as unset and
 - use 20024 gas in total.
 
-## Copyright
+## 版权
 
-Copyright and related rights waived via [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
+版权及相关权利由此[CC0](https://creativecommons.org/publicdomain/zero/1.0/)声明弃权。
